Supports font, images, and added some components

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,13 @@
                 }
             }
         ]
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "runtime": "automatic"
+            }
+        ]
     ]
 }
