--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "concurrently": "^8.2.2",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "tailwindcss": "^3.3.5"
   },
   "dependencies": {
@@ -13,13 +15,14 @@
     "css-loader": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simple-peer": "^9.11.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"webpack-dev-server --mode development\" \"tailwindcss -i src/styles/input.css -o src/styles/styles.css -w\"",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
   }
 }
