--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "tailwindcss": "^3.3.5"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "firebase": "^10.6.0",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simple-peer": "^9.11.1",
