--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "simple-peer": "^9.11.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
@@ -25,7 +26,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve --open",
     "build": "webpack --mode production"
   }
 }
