--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "css-loader": "^6.8.1",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
+    "sort-by": "^0.0.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
